@@ -96,3 +96,9 @@ OBS_VeryImportantProject:
   value_count: 0
   attrib_namespace_id: 9
   issue_list: 0
+OBS_AutoCleanup:
+  id: 76
+  name: AutoCleanup
+  value_count: 1
+  attrib_namespace_id: 9
+  issue_list: 0
