@@ -99,7 +99,7 @@ class CodeQualityTest < ActiveSupport::TestCase
       'IssueTrackersController#create' => 53.05,
       'IssueTrackersController#update' => 100.78,
       'MaintenanceHelper#create_new_maintenance_incident' => 64.93,
-      'MaintenanceHelper#do_branch' => 1138.89,
+      'MaintenanceHelper#do_branch' => 1163.15,
       'MaintenanceIncident#getUpdateinfoId' => 136.88,
       'Owner::find_assignees' => 71.55,
       'Owner::search' => 67.56,
@@ -114,6 +114,7 @@ class CodeQualityTest < ActiveSupport::TestCase
       'Project::get_by_name' => 53.44,
       'Project#release_targets_ng' => 57.91,
       'Project#update_product_autopackages' => 52.05,
+      'ProjectCreateAutoCleanupRequests#perform' => 54.62,
       'ProjectStatusCalculator#calc_status' => 74.59,
       'PublicController#binary_packages' => 131.24,
       'Repository#cleanup_before_destroy' => 85.53,
