@@ -46,6 +46,8 @@ Features
    the repositories as defined in the local project definition. This allows to move
    around kiwi files without the need to modify them.
 
+ * Auto cleanup of user ~:branches: projects can be enabled via /configuration
+
 Changes on purpose:
 ===================
 
